--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-# Eventuate Tram Customers and Orders
+# Eventuate Tram Customers and Orders - Micronaut version
 
 This application demonstrates two key patterns:
 
@@ -11,7 +11,7 @@ The application consists of three services:
 * `Customer Service` - manages customers
 * `Order History Service` - maintains the order history
 
-All services are implemented using Spring Boot, JPA and the https://github.com/eventuate-tram/eventuate-tram-core[Eventuate Tram framework], which provides transactional publish/subscribe.
+All services are implemented using [Micronaut](https://micronaut.io), JPA and the https://github.com/eventuate-tram/eventuate-tram-core[Eventuate Tram framework], which provides [transactional publish/subscribe](https://microservices.io/patterns/data/transactional-outbox.html).
 
 The `Order Service` uses a choreography-based saga to enforce the customer's credit limit when creating orders.
 
