--- a/README.adoc
+++ b/README.adoc
@@ -121,7 +121,6 @@ First, build the application
 Next, launch the services using https://docs.docker.com/compose/[Docker Compose]:
 
 ```
-export DOCKER_HOST_IP=...
 ./gradlew mysqlbinlogComposeBuild
 ./gradlew mysqlbinlogComposeUp
 ```
@@ -129,18 +128,16 @@ export DOCKER_HOST_IP=...
 Note:
 
 1. You can also run the Postgres version using `./gradlew postgrespollingComposeUp` or `./gradlew postgreswalComposeUp`
-2. You need to set `DOCKER_HOST_IP` before running Docker Compose.
-This must be an IP address or resolvable hostname.
-It cannot be `localhost`.
+2. If the containers aren't accessible via `localhost` - e.g. you are using Docker Toolbox, you will have to use `${DOCKER_HOST_IP}` instead of localhost.
 See this http://eventuate.io/docs/usingdocker.html[guide to setting `DOCKER_HOST_IP`] for more information.
 
 == Using the application
 
 Once the application has started, you can use the application via the Swagger UI:
 
-* `Customer Service` - `http://${DOCKER_HOST_IP}:8082/swagger-ui/index.html`
-* `Order Service` - `http://${DOCKER_HOST_IP}:8081/swagger-ui/index.html`
-* `Order History Service` - `http://${DOCKER_HOST_IP}:8083/swagger-ui/index.html`
+* `Customer Service` - `http://localhost:8082/swagger-ui/index.html`
+* `Order Service` - `http://localhost:8081/swagger-ui/index.html`
+* `Order History Service` - `http://localhost:8083/swagger-ui/index.html`
 
 You can also use `curl` to interact with the services.
 First, let's create a customer:
@@ -151,7 +148,7 @@ $ curl -X POST --header "Content-Type: application/json" -d '{
     "amount": 5
   },
   "name": "Jane Doe"
-}' http://${DOCKER_HOST_IP}:8082/customers
+}' http://localhost:8082/customers
 
 HTTP/1.1 200
 Content-Type: application/json;charset=UTF-8
@@ -169,7 +166,7 @@ $ curl -X POST --header "Content-Type: application/json" -d '{
   "orderTotal": {
     "amount": 4
   }
-}' http://${DOCKER_HOST_IP}:8081/orders
+}' http://localhost:8081/orders
 
 HTTP/1.1 200
 Content-Type: application/json;charset=UTF-8
@@ -183,7 +180,7 @@ Content-Type: application/json;charset=UTF-8
 Next, check the status of the `Order` in the `Order Service`:
 
 ```bash
-$ curl -X GET http://${DOCKER_HOST_IP}:8081/orders/1
+$ curl -X GET http://localhost:8081/orders/1
 
 HTTP/1.1 200
 Content-Type: application/json;charset=UTF-8
@@ -197,7 +194,7 @@ Content-Type: application/json;charset=UTF-8
 Finally, look at the customer's order history in the `Order History Service`:
 
 ```bash
-$ curl -X GET --header "Accept: */*" "http://${DOCKER_HOST_IP}:8083/customers/1"
+$ curl -X GET --header "Accept: */*" "http://localhost:8083/customers/1"
 
 HTTP/1.1 200
 Content-Type: application/json;charset=UTF-8
